<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/positionView"
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:text="@string/numberPeriod"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/word"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="0dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/moreButton"
        app:layout_constraintStart_toEndOf="@+id/positionView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/moreButton"
        android:layout_width="@dimen/normalIconSize"
        android:layout_height="@dimen/normalIconSize"
        android:contentDescription="@string/more"
        android:src="@drawable/handler"
        android:tint="?attr/iconColorRegular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>