<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/questionView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/loadingGameEllipsis"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/choicesView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/choicesView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/messageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionView"
        app:spanCount="1"
        app:stackFromEnd="true"
        tools:itemCount="4"
        tools:listitem="@layout/choice_item" />

    <TextView
        android:id="@+id/messageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hurryTime"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choicesView" />

    <TextView
        android:id="@+id/finishMessageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@id/progressBarContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/progressBarContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/restartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishMessageView">

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/oneHundred"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <TextView
                android:id="@+id/wrongView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/oneHundred"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/wrongProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:max="100"
                android:progress="50"
                android:progressBackgroundTint="@color/red"
                android:progressTint="@color/red" />

            <ImageView
                android:layout_width="@dimen/normalIconSize"
                android:layout_height="@dimen/normalIconSize"
                android:contentDescription="@string/wrong"
                android:src="@drawable/x"
                android:tint="@color/red" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/correctView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/oneHundred"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/correctProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:max="100"
                android:progress="50"
                android:progressBackgroundTint="@color/green"
                android:progressTint="@color/green" />

            <ImageView
                android:layout_width="@dimen/normalIconSize"
                android:layout_height="@dimen/normalIconSize"
                android:contentDescription="@string/correct"
                android:src="@drawable/check"
                android:tint="@color/green" />

        </LinearLayout><!--

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/oneHundred"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/timeProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:max="100"
                android:progress="50"
                android:progressBackgroundTint="@color/orange"
                android:progressTint="@color/orange" />

            <ImageView
                android:layout_width="@dimen/normalIconSize"
                android:layout_height="@dimen/normalIconSize"
                android:contentDescription="@string/time"
                android:src="@drawable/timer"
                android:tint="@color/orange" />

        </LinearLayout>
-->
    </LinearLayout>

    <Button
        android:id="@+id/restartButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="?attr/colorPrimary"
        android:minHeight="60dp"
        android:text="@string/restart"
        android:textColor="?attr/textColorContrasted"
        android:textSize="20sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gameAreaGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="questionView, choicesView, messageView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/summaryGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="finishMessageView, progressBarContainer, restartButton" />

</androidx.constraintlayout.widget.ConstraintLayout>